Revert "ci: update `Dockerfile`"
This reverts commit 843f1026c2d1c216953c9214c217f76776c85c9b.

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,19 +1,19 @@
-ARG  BUN_IMAGE=oven/bun:1.0.20
+ARG  BUN_IMAGE=oven/bun:1.0.18
 ARG  BUILDER_IMAGE=golang:1.22-rc-alpine3.18
 ARG  DISTROLESS_IMAGE=gcr.io/distroless/static
 
 ############################
 # STEP 1 build the docs page
 ############################
-FROM ${BUN_IMAGE} as ui-builder
+FROM ${BUN_IMAGE} as docs-builder
 
-WORKDIR /build/ui/
+WORKDIR /build/docs/
 
-COPY ./ui/ .
+COPY ./docs/ .
 
-RUN bun install --frozen-lockfile --location=global
+RUN bun install --frozen-lockfile
 
-RUN bun run build-only
+RUN NODE_ENV=production bun run docs:build
 
 ############################
 # STEP 2 build executable binary
@@ -37,12 +37,12 @@ RUN go mod verify
 COPY . .
 
 # Copy our pre-built document
-COPY --from=ui-builder /build/ui/dist ./ui/dist
+COPY --from=docs-builder /build/docs/dist ./docs/dist
 
 # Build the static binary
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
-    -ldflags='-w -s -extldflags "-static"' -a \
-    -o /go/bin/neverland-camping ./cmd/serve.go
+	-ldflags='-w -s -extldflags "-static"' -a \
+	-o /go/bin/neverland-camping ./cmd/serve.go
 
 ############################
 # STEP 3 build a small image
