--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "flowbite": "^2.2.1",
     "pinia": "^2.1.7",
     "tailwindcss": "^3.4.1",
     "vue": "^3.3.11",
