--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "prepare:dev": "cd ../../ && husky install ./src/ui/.husky",
+    "pb-typegen": "pocketbase-typegen --db ../pb_data/data.db --out ./src/utils/PocketbaseTypes.ts",
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
@@ -22,6 +23,7 @@
   "dependencies": {
     "flowbite": "^2.2.1",
     "pinia": "^2.1.7",
+    "pocketbase": "^0.20.1",
     "tailwindcss": "^3.4.1",
     "vue": "^3.3.11",
     "vue-meta": "alpha",
@@ -43,6 +45,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.3",
     "npm-run-all2": "^6.1.1",
+    "pocketbase-typegen": "^1.2.1",
     "postcss-import": "^16.0.0",
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
