--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "bindings": "^1.5.0",
     "flowbite": "^2.2.1",
     "pinia": "^2.1.7",
     "pocketbase": "^0.20.1",
@@ -48,8 +49,12 @@
     "pocketbase-typegen": "^1.2.1",
     "postcss-import": "^16.0.0",
     "prettier": "^3.0.3",
+    "sqlite3": "^5.1.7",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
     "vue-tsc": "^1.8.25"
-  }
+  },
+  "trustedDependencies": [
+    "sqlite3"
+  ]
 }
